:q :wq adjusted js

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <title>The Silly Quiz in a Silly Place</title>
   <meta name="description" type="A quiz app that runs through the questions of Monty Python and the Holy Grail.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="shortcut icon" href="#">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Gaegu" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="index.css" />
 </head>
 
@@ -27,7 +30,7 @@
         </ul>
       </section>
     </header>
-    <section role="region" class="jungleBox">
+    <section role="region" class="tryAgain">
       <section class="startQuiz box">
         <h1>How much do you know about New World monkeys?</h1>
         <img src="images/start.jpg" alt="monkey wearing cowboy hat" class="images">
