--- a/index.html
+++ b/index.html
@@ -2,50 +2,54 @@
 <html lang="en">
 
 <head>
-  <meta charset="utf-8" />
-  <title>The Silly Quiz in a Silly Place</title>
-  <meta name="description" type="A quiz app that runs through the questions of Monty Python and the Holy Grail.">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="shortcut icon" href="#">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Gaegu" rel="stylesheet">
-  <link rel="stylesheet" type="text/css" href="index.css" />
+    <meta charset="utf-8" />
+    <title>The Silly Quiz in a Silly Place</title>
+    <meta name="description" type="A quiz app that runs through the questions of Monty Python and the Holy Grail.">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="#">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Gaegu" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="index.css" />
 </head>
 
 <body>
-  <main role="main" class="container">
-    <header role="banner" class="header">
-      <section>
-        <a href="index.html">
-          <img class="topMonkey" src="images/top.png" alt="smiling monkey" />
-        </a>
-      </section>
-      <section>
-        <ul>
-          <li class="sizeMe">Question:
-            <span class="questionNumber">0</span>/10</li>
-          <li class="sizeMe">Score:
-            <span class="score">0</span>
-          </li>
-        </ul>
-      </section>
-    </header>
-    <section role="region" class="tryAgain">
-      <section class="startQuiz box">
-        <h1>How much do you know about New World monkeys?</h1>
-        <img src="images/start.jpg" alt="monkey wearing cowboy hat" class="images">
-        <button type="button" class="startButton button">Start</button>
-      </section>
-      <section class="questionBox box altBox">
-      </section>
-      <section class="response box altBox"></section>
-      <section class="final box altBox"></section>
-    </section>
-  </main>
+    <main role="main" class="container">
+        <header role="banner" class="header">
+            <section>
+                <a href="index.html">
+                    <img class="bridgeBanner" src="Images/Bridge-of-Death-banner.jpg" alt="Welcome to the Quiz" />
+                </a>
+            </section>
+        </header>
+        <section role="region" class="tryAgain">
+            <section class="startQuiz box">
+                <h1>Who would cross the Bridge of Death must answer me these questions three, ere the other side he see.
+                </h1>
+                <img src="Images/Bridgekeeper-start.png" alt="bridge keeper stops you" class="images">
+                <button type="button" class="startButton button">Walk to the Bridge of Death?</button>
+                <section>
+                    <ul>
+                        <li class="sizeMe">Question:
+                            <span class="questionNumber">0</span>/12</li>
+                        <li class="sizeMe">Score:
+                            <span class="score">0</span>
+                        </li>
+                    </ul>
+                </section>
+            </section>
+            
+            <section class="questionBox box altBox">
+            </section>
+            <section class="response box altBox"></section>
+            <section class="final box altBox"></section>
+        </section>
+    </main>
 
-  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-    crossorigin="anonymous"></script>
-  <script src="index.js"></script>
+    <script
+  src="https://code.jquery.com/jquery-3.4.1.js"
+  integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+  crossorigin="anonymous"></script>
+    <script src="index.js"></script>
 </body>
 
 </html>
