update css and html

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 
       <section role="region" class="quizBoxes">
         <section class="startQuiz box">
-          <p> toaster riches. </p>
+          <h1>Let's review some biological concepts developed in the recent centuries!</h1>
+          <button type="button" id="begin">Begin</button>
         </section>
         <section class="questionBox box altBox">
         </section>
