--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <h1>Introduction to Recent Biological Concepts</h1> 
         <section class ="quizScores">
           <ul>
-            <li class="sizeMe">Question:
-              <span class="questionNumber">0</span>/5</li>
-            <li class="sizeMe">Score:
+            <li class="counter">Question:
+              <span class="questionNumber"> - </span>/5</li>
+            <li class="counter">Score:
               <span class="score">0</span>
             </li>
           </ul>
