suck it css you cant keep me down. what i thought was a jquery issue was actually css. shouldve guessed. also more credence to argument of leaving css for last

--- a/index.html
+++ b/index.html
@@ -45,9 +45,11 @@
       <!--introPage-->
 
       <!-- where quiz questions, answers, and final results will appear. same CSS -->
-      <section class="quizPortion">
+      <div class="quizPortion">
         <!-- questions with submitAns button -->
         <section class="questionBox altBox">
+          <p>My canary in the coalmine!</p>
+          <!-- <button type="submit" class="submitAns">Submit Answer</button> -->
         </section>
         <!-- answers with nextQues button -->
         <section class="responseBox altBox">
@@ -58,7 +60,7 @@
           <!-- see if this works without needing a function for it -->
           <button type="submit" class="restartQuiz"><a href="index.html">Try Again?</a></button>
         </section>
-      </section>
+      </div>
       <!--quizPortion-->
     </div>
     <!--content -->
