more update to js, makeQues no longer working

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         </section>
         <!-- results with restartQuiz button -->
         <section class="redoBox y box">
+          <p>chirp chirp mofo</p>
           <!-- see if this works without needing a function for it -->
           <!-- <button type="submit" class="restartQuiz"><a href="index.html">Try Again?</a></button> -->
         </section>
