updates that broke more things and did not fix original problem with questions not appearing

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 
 <body>
   <!-- background image- DO NOT CHANGE -->
-  <section class="background">
-    <!-- <video autoplay muted loop class="backVideo">
+  <!-- <section class="background">
+    <video autoplay muted loop class="backVideo">
       <source src="Images/background-wheat.mp4" type="video/mp4">
-    </video> -->
-  </section>
+    </video>
+  </section> -->
   <!-- all html content -->
   <main role="main" class="container">
     <div class="content">
@@ -59,7 +59,7 @@
         <section class="redoBox y box">
           <p>chirp chirp mofo</p>
           <!-- see if this works without needing a function for it -->
-          <!-- <button type="submit" class="restartQuiz"><a href="index.html">Try Again?</a></button> -->
+          <button type="submit" class="restartQuiz"><a href="index.html">Try Again?</a></button>
         </section>
       </div>
       <!--quizPortion-->
