--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   src="https://code.jquery.com/jquery-3.4.1.js"
   integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
   crossorigin="anonymous"></script>
-  <script src="store.js"></script>
+  <!-- <script src="store.js"></script> -->
   <script src="indexbranch.js"></script>
 </body>
 
