css back on, ques appearing, final touches to be added now

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 
 <body>
   <!-- background image- DO NOT CHANGE -->
-  <!-- <section class="background">
+  <section class="background">
     <video autoplay muted loop class="backVideo">
       <source src="Images/background-wheat.mp4" type="video/mp4">
     </video>
-  </section> -->
+  </section>
   <!-- all html content -->
   <main role="main" class="container">
     <div class="content">
@@ -47,19 +47,13 @@
       <div class="quizPortion">
         <!-- questions with submitAns button -->
         <section class="quesBox y box">
-          <p>My canary in the coalmine!</p>
-          <!-- <button type="submit" class="submitAns">Submit Answer</button> -->
         </section>
         <!-- answers with nextQues button -->
         <section class="ansBox y box">
-          <p>Maybe a robin this time?</p>
-          
         </section>
         <!-- results with restartQuiz button -->
         <section class="redoBox y box">
-          <p>chirp chirp mofo</p>
-          <!-- see if this works without needing a function for it -->
-          <button type="submit" class="restartQuiz"><a href="index.html">Try Again?</a></button>
+          <button class="restartQuiz button"><a href="index.html">Try Again?</a></button>
         </section>
       </div>
       <!--quizPortion-->
