hahahhaha take that! almost all css finished, got the jquery working and my html is a darling as always

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <li class="stats">Score:
               <span class="score">0</span>
             </li>
-          </ul>
+          </ul> <br>
         </section>
         <!--quizScores-->
 
@@ -45,15 +45,14 @@
 
       <!-- where quiz questions, answers, and final results will appear. same CSS -->
       <div class="quizPortion">
-        <!-- questions with submitAns button -->
+        <!-- area where question/possible answers and submit button appended -->
         <section class="quesBox y box">
         </section>
-        <!-- answers with nextQues button -->
+        <!-- area where correct answer shown and next (or finish) button appended-->
         <section class="ansBox y box">
         </section>
-        <!-- results with restartQuiz button -->
+        <!-- area where final scores and retry button appended-->
         <section class="redoBox y box">
-          <button class="restartQuiz button"><a href="index.html">Try Again?</a></button>
         </section>
       </div>
       <!--quizPortion-->
